remove overlays works, not being saved to state yet

--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
@@ -39,6 +39,14 @@
 			[attr.tooltip-class]="mapsAmount > 1 ? 'bottom right' : 'top right'">
 		<i class="icon icon-presets"></i>
 	</button>
+
+	<button *ngIf="overlay" class="small-icon-button remove-overlay"
+			[class.active2]="isFavorite"
+			(click)="removeOverlay()"
+			tooltip-value="Remove overlay"
+			[attr.tooltip-class]="mapsAmount > 1 ? 'bottom right' : 'top right'">
+		<i class="icon icon-remove-overlay"></i>
+	</button>
 </div>
 
 <div class="description">
