--- a/src/app/@ansyn/menu-items/filters/components/filters-collection/filters-collection.component.less
+++ b/src/app/@ansyn/menu-items/filters/components/filters-collection/filters-collection.component.less
@@ -37,3 +37,12 @@
 	border-radius: 2px;
 	background: white -webkit-gradient(linear, 0 0, 0 100%, color-stop(.5, rgba(255, 255, 255, .2)), color-stop(.5, transparent), to(transparent));
 }
+
+div.removed-show-hide {
+	text-decoration: underline;
+	font-size: 16px;
+	font-style: normal;
+	color: rgba(255, 255, 255, 0.75);
+	margin-right: 7px;
+	cursor: pointer;
+}
