removed overlays are now saved in case. known bug - overlap effects with favorite overlays

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -69,6 +69,8 @@
           "activeLayersIds": []
         },
         "favoriteOverlays": [],
+        "removedOverlaysIds": [],
+        "removedOverlaysVisibility": true,
         "region": {
           "type": "Point",
           "coordinates": [
