--- a/src/app/@ansyn/assets/styles/icons.less
+++ b/src/app/@ansyn/assets/styles/icons.less
@@ -27,7 +27,11 @@
 }
 
 .icon-remove-overlay:before {
-	content: "\e978";
+	content: "\e92b";
+}
+
+.icon-restore-overlay:before {
+	content: "\e92a";
 }
 
 .icon-presets:before {
