--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
@@ -42,7 +42,7 @@
 
 	<button *ngIf="overlay" class="small-icon-button remove-overlay"
 			(click)="removeOverlay()"
-			[attr.tooltip-value]="isRemoved() ? 'Remove overlay' : 'Restore overlay'"
+			[attr.tooltip-value]="isRemoved() ? 'Restore overlay' : 'Remove overlay'"
 			[attr.tooltip-class]="mapsAmount > 1 ? 'bottom right' : 'top right'">
 		<i *ngIf="!isRemoved()" class="icon icon-remove-overlay"></i>
 		<i *ngIf="isRemoved()" class="icon icon-restore-overlay"></i>
