--- a/src/app/@ansyn/menu-items/filters/components/filters-collection/filters-collection.component.html
+++ b/src/app/@ansyn/menu-items/filters/components/filters-collection/filters-collection.component.html
@@ -11,7 +11,7 @@
 		</ansyn-filter-container>
 		<div class="removed-show-hide">
 			<div class="show-hide-filtered-overlays">
-				<ansyn-slider-checkbox [checked]="!removedOverlaysVisibility" (checkedChange)="ShowRemoved($event)"></ansyn-slider-checkbox>
+				<ansyn-slider-checkbox [checked]="!removedOverlaysVisibility" (checkedChange)="ShowRemoved()"></ansyn-slider-checkbox>
 				<div class="show-hide-filtered-overlays-text">
 					<span>Show manually filtered overlays ({{removedOverlaysCount}})</span>
 				</div>
