--- a/src/app/@ansyn/menu-items/filters/components/filters-collection/filters-collection.component.html
+++ b/src/app/@ansyn/menu-items/filters/components/filters-collection/filters-collection.component.html
@@ -9,16 +9,9 @@
 			*ngFor="let filter of filters"
 			[filter]="filter">
 		</ansyn-filter-container>
-		<div class="removed-show-hide">
-			<div class="show-hide-filtered-overlays">
-				<ansyn-slider-checkbox [checked]="!removedOverlaysVisibility" (checkedChange)="ShowRemoved()"></ansyn-slider-checkbox>
-				<div class="show-hide-filtered-overlays-text">
-					<span>Show manually filtered overlays ({{removedOverlaysCount}})</span>
-				</div>
-			</div>
-			<div class="reset-list">
-				<span (click)="showAll()">Reset list</span>
-			</div>
-		</div>
+
+		<ansyn-manual-removed-overlays>
+		</ansyn-manual-removed-overlays>
+
 	</div>
 </div>
