remove overlays from case (#1743)
* remove overlays works, not being saved to state yet

* removed overlays are now saved in case. known bug - overlap effects with favorite overlays

* fixed tests

* deleted unneeded file bash.exe.stackdump

* implement restore overlay

* implemented Reset All

* removed overlays visibility is now saved in case

* fixed tests

* fixed filters-collection.component.html

* after CR

* after CR2

--- a/src/app/@ansyn/assets/styles/icons.less
+++ b/src/app/@ansyn/assets/styles/icons.less
@@ -26,6 +26,14 @@
 	content: "\e924";
 }
 
+.icon-remove-overlay:before {
+	content: "\e92b";
+}
+
+.icon-restore-overlay:before {
+	content: "\e92a";
+}
+
 .icon-presets:before {
 	content: "\e91b";
 }
