--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
@@ -39,6 +39,13 @@
 			[attr.tooltip-class]="mapsAmount > 1 ? 'bottom right' : 'top right'">
 		<i class="icon icon-presets"></i>
 	</button>
+
+	<button *ngIf="overlay" class="small-icon-button remove-overlay"
+			(click)="removeOverlay()"
+			[attr.tooltip-value]="isRemoved ? 'Restore overlay' : 'Remove overlay'"
+			[attr.tooltip-class]="mapsAmount > 1 ? 'bottom right' : 'top right'">
+		<i class="icon" [ngClass]="isRemoved ? 'icon-restore-overlay' : 'icon-remove-overlay'"></i>
+	</button>
 </div>
 
 <div class="description">
