first commit - added textmox under the annotation wrapper

--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
@@ -6,5 +6,9 @@
 		<button [class.active]="this.action?.payload?.showMeasures" (mousedown)="toggleMeasures($event)"><i class="icon-tools-ruler"></i></button>
 		<button class='removeFeature' (mousedown)="removeFeature($event)"><i class="icon-close"></i></button>
 	</div>
-
+	<div class="annotation-label">
+		<span>dasldjhaskjdhsakj</span>
+	</div>
 </div>
+
+
