--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
@@ -8,91 +8,99 @@
 	height: 100%;
 	top: 0;
 	left: 0;
-	.context-menu-wrapper {
-		display: flex;
-		align-items: center;
-		flex-direction: column;
-		z-index: @z-index-annotation-cotext-menu;
+
+	div.context-menu-wrapper {
 		position: absolute;
-		outline: 2px dashed #27B2CF;
-		outline-offset: 10px;
-		visibility: hidden;
-		transform-origin: left top;
+		display: flex;
 		pointer-events: none;
-		.buttons {
+		justify-content: center;
+		z-index: @z-index-annotation-cotext-menu;
+
+		div.context-menu {
+			width: 100%;
+			height: 100%;
+			display: flex;
+			align-items: center;
+			flex-direction: column;
+			position: absolute;
+			outline: 2px dashed #27B2CF;
+			outline-offset: 10px;
+			transform-origin: left top;
+			.buttons {
+				position: absolute;
+				pointer-events: all;
+				border: 1px solid white;
+				box-sizing: border-box;
+				background-color: @application-main-color;
+				color: white;
+				display: flex;
+				align-items: center;
+				right: 0;
+				top: 0;
+
+				transform: translate(calc(~'100% + 15px'), -12px);
+
+				button {
+					background-color: @application-main-color;
+					color: white;
+					border: none;
+					outline: none;
+					padding: 2px 6px;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					font-size: 20px;
+
+					&.removeFeature {
+						font-size: 19px;
+						margin-bottom: 1px;
+
+						i.icon-close:before {
+							content: '\2715'; // MULTIPLICATION X
+						}
+					}
+
+					&.active, &:hover {
+						background-color: rgb(41, 127, 155);
+					}
+				}
+			}
+		}
+
+		span.annotation-label {
+			height: 32px;
+			position: absolute;
+			font-size: 17px;
+			color: white;
+			text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+			top: calc(~'100% + 20px');
+		}
+
+		form.annotation-label-edit {
+
+			width: 100%;
+			max-width: 250px;
+			height: 32px;
 			position: absolute;
 			pointer-events: all;
 			border: 1px solid white;
 			box-sizing: border-box;
-			background-color: @application-main-color;
-			color: white;
+			background-color: rgba(255, 255, 255, 0.7);
+			color: black;
 			display: flex;
 			align-items: center;
-			right: 0;
-			top: 0;
-
-			transform: translate(calc(~'100% + 15px'), -12px);
-
-			button {
-				background-color: @application-main-color;
-				color: white;
-				border: none;
-				outline: none;
-				padding: 2px 6px;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				font-size: 20px;
-
-				&.removeFeature {
-					font-size: 19px;
-					margin-bottom: 1px;
-
-					i.icon-close:before {
-						content: '\2715'; // MULTIPLICATION X
-					}
-				}
-
-				&.active, &:hover {
-					background-color: rgb(41, 127, 155);
-				}
-			}
-		}
-	}
-
-	.annotation-label {
-		min-width: 200px;
-		height: 32px;
-		position: absolute;
-		pointer-events: all;
-		border: 1px solid white;
-		box-sizing: border-box;
-		background-color: rgba(255, 255, 255, 0.7);
-		color: black;
-		display: flex;
-		align-items: center;
-		top: calc(~'100% + 15px');
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		.icon-edit {
-			font-size: 27px;
-		}
-		form {
-			visibility: visible;
-			background-color: transparent;
+			top: calc(~'100% + 20px');
 			display: flex;
+			flex-direction: row;
 			justify-content: space-between;
-		}
-	}
+			.label-input {
+				font-size: 17px;
+				width: 100%;
+			}
 
-	&:focus, &.visible {
-		.context-menu-wrapper {
-			visibility: visible;
-		}
-
-		form {
-			visibility: visible;
+			i.icon-edit {
+				font-size: 27px;
+			}
 		}
 	}
 }
