remove arrow from select

--- a/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -29,14 +29,14 @@
 			width: 100%;
 			border-bottom: 1px solid;
 			padding: 7px 0;
-			.active-annotation-layer{
+			select.active-annotation-layer {
 				background: transparent;
 				border: none;
 				color: white;
 				outline: none;
 				border-bottom: 1px solid white;
 				margin-top: 2px;
-
+				appearance: none;
 				option {
 					color: black;
 				}
