--- a/src/app/@ansyn/map-facade/components/overlay-source-type-notice/overlay-source-type-notice.component.html
+++ b/src/app/@ansyn/map-facade/components/overlay-source-type-notice/overlay-source-type-notice.component.html
@@ -1,3 +1,3 @@
-<div class="overlay-source-type-notice"
+<div [hidden]="!title" class="overlay-source-type-notice"
 	 [attr.tooltip-value]="title"
 	 tooltip-class="top wrap">{{title}}</div>
