feat: multiple translation loaders

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -341,6 +341,11 @@
 	},
     "storageService": {
       "baseUrl": "{{ getv "/ansyn/storage/baseurl" "http://ansyn.io:8081/api/store" }}"
+    },
+    "translation": {
+    	"default": {
+		 	"Sentinel-2A": "Sentinel 2A"
+	   	}
     }
   },
   "loginConfig": {
