fix: on menu open minimize backtowolrd

--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -37,6 +37,31 @@
 			animation-name: pinned;
 		}
 
+		&.isPinned div.layer {
+			/deep/ .status {
+				.buttons button.back-to-world-view {
+					font-size: 0 !important;
+					i {
+						font-size: 13.33px !important;;
+					}
+				}
+			}
+			/deep/ .maps-container {
+				div.imageries-container {
+					&.layout2, &.layout4, &.layout6, &.layout5 div.map-container-wrapper:not(:first-child) {
+						/deep/ ansyn-imagery-status {
+							.buttons button.back-to-world-view {
+								font-size: 0;
+								i {
+									font-size: 13.33px;
+								}
+							}
+						}
+					}
+				}
+			}
+
+		}
 		&.isNotPinned div.layer {
 			animation-name: unPinned;
 		}
