add select arrow ( manually )

--- a/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.html
+++ b/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.html
@@ -8,6 +8,7 @@
 				[value]="layer?.id"
 				*ngFor="let layer of annotationLayerIds$ | async">{{ layer.name }}</option>
 		</select>
+		<span class="arrow">▼</span>
 	</div>
 </div>
 
