--- a/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -37,6 +37,7 @@
 				border-bottom: 1px solid white;
 				margin-top: 2px;
 				appearance: none;
+				padding-right: 18px;
 				option {
 					color: black;
 				}
@@ -146,4 +147,11 @@
 		}
 
 	}
+}
+span.arrow {
+	position: relative;
+	font-size: 7px;
+	right: 10px;
+	color: white;
+	top: -1px;
 }
