remove arrow from select (#1754)
* remove arrow from select

* add select arrow ( manually )

--- a/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -29,14 +29,15 @@
 			width: 100%;
 			border-bottom: 1px solid;
 			padding: 7px 0;
-			.active-annotation-layer{
+			select.active-annotation-layer {
 				background: transparent;
 				border: none;
 				color: white;
 				outline: none;
 				border-bottom: 1px solid white;
 				margin-top: 2px;
-
+				appearance: none;
+				padding-right: 18px;
 				option {
 					color: black;
 				}
@@ -146,4 +147,11 @@
 		}
 
 	}
+}
+span.arrow {
+	position: relative;
+	font-size: 7px;
+	right: 10px;
+	color: white;
+	top: -1px;
 }
