changed overlays time format to en-GB

--- a/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.html
+++ b/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.html
@@ -58,7 +58,7 @@
 				</div>
 
 				<div class="cases-table-body-col">
-					{{entities[id].lastModified | date:"MM/dd/yy HH:mm" }}
+					{{formatTime(entities[id].lastModified)}}
 				</div>
 
 				<!--menu-->
