feat: preview error

--- a/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.less
+++ b/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.less
@@ -23,6 +23,16 @@
 		justify-content: start;
 		align-items: center;
 		position: relative;
+		main {
+			p.error-text {
+				top: 50px;
+				position: absolute;
+				color: #2baac3;
+				font-size: 16px;
+				width: 100%;
+				text-align: center;
+			}
+		}
 	}
 
 	.transparent {
