--- a/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.html
+++ b/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.html
@@ -8,7 +8,7 @@
 		<ansyn-loader [show]="loading"></ansyn-loader>
 	</main>
 	<footer>
-		<div dir="rtl">{{overlay?.sensorName | translate}}</div>
+		<div dir="rtl">{{sensorName | translate}}</div>
 		<div>{{formattedTime}}</div>
 	</footer>
 </div>
