annotation label edit is now also submited by clicking the pen button

--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
@@ -17,7 +17,7 @@
 
 	<form class="annotation-label-edit" (ngSubmit)="updateLabel()" *ngIf="clickMenuProps.showLabel">
 		<input class="label-input" type="text" placeholder="{{clickMenuProps.label}}" [(ngModel)]="clickMenuProps.label"  name="EditLabel">
-		<i class="icon-edit"></i>
+		<i (click)="updateLabel()" class="icon-edit"></i>
 	</form>
 
 </div>
