fix: rmv zone-error from configuration.ts

--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
@@ -26,6 +26,7 @@
 			outline: 2px dashed #27B2CF;
 			outline-offset: 10px;
 			transform-origin: left top;
+			left: 0;
 			.buttons {
 				position: absolute;
 				pointer-events: all;
