feat: preview error (#1771)
* feat: preview error

* fix: breaking changes(removing overlay)

* fix: configuration const file

* fix: rmv zone-error from configuration.ts

--- a/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.html
+++ b/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.html
@@ -1,10 +1,14 @@
 <div class="overlay-overview" (dblclick)="onDblClick()">
 	<main>
-		<img [src]="overlay?.thumbnailUrl || ''" (load)="finishedLoadingImage()" [class.loading]="loading">
+		<img [src]="imageSrc"
+			 (error)="imageSrc = errorSrc"
+			 (load)="finishedLoadingImage()"
+			 [class.loading]="loading">
+		<p class="error-text" *ngIf="imageSrc === errorSrc">Preview is not available</p>
 		<ansyn-loader [show]="loading"></ansyn-loader>
 	</main>
 	<footer>
-		<div dir="rtl">{{overlay?.sensorName | translate}}</div>
+		<div dir="rtl">{{sensorName | translate}}</div>
 		<div>{{formattedTime}}</div>
 	</footer>
 </div>
