fix: add 'worldView' to case model

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -58,12 +58,14 @@
                 }
               },
               "flags": {},
-              "mapType": "openLayersMap",
-              "sourceType": "{{ getv "/ansyn/imagery/mapsource" "ESRI_4326" }}",
-              "id": "defaultImagery1"
+              "worldView": {
+              	"mapType": "openLayersMap",
+			    "sourceType": "{{ getv "/ansyn/imagery/mapsource" "ESRI_4326" }}",
+              },
+              "id": "af3b94d2-03ff-44e6-9f73-10d386aff493"
             }
           ],
-          "activeMapId": "defaultImagery1"
+          "activeMapId": "af3b94d2-03ff-44e6-9f73-10d386aff493"
         },
         "layers": {
           "activeLayersIds": []
