fix: illegal json (tmpl)

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -59,8 +59,8 @@
               },
               "flags": {},
               "worldView": {
-              	"mapType": "openLayersMap",
-			    "sourceType": "{{ getv "/ansyn/imagery/mapsource" "ESRI_4326" }}",
+				"mapType": "openLayersMap",
+				"sourceType": "{{ getv "/ansyn/imagery/mapsource" "ESRI_4326" }}"
               },
               "id": "af3b94d2-03ff-44e6-9f73-10d386aff493"
             }
