fix: alert imagery status not geo registred

--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
@@ -11,7 +11,7 @@
 	<button *ngIf="mapsAmount > 1"
 			class="small-icon-button link-maps"
 			tooltip-value="Momentarily link screens"
-			[disabled]="!isGeoRegistred"
+			[disabled]="noGeoRegistration"
 			[attr.tooltip-class]="mapsAmount > 1 ? 'bottom right' : 'top right'"
 			(click)="toggleMapSynchronization.emit()">
 		<i class="icon icon-temporary-link"></i>
