turned all auth0's WebAuth parameters into invironment variables

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1117,8 +1117,7 @@
   	"baseUrl": "https://api.openaerialmap.org/meta"
   },
   "imisightOverlaysSourceConfig": {
-    "baseUrl": "https://gw.sat.imisight.net/a3/search",
-    "callbackURL":"{{ getv "/ansyn/imisight/callback/url" "http://localhost:4200/#/callback/" }}"
+    "baseUrl": "https://gw.sat.imisight.net/a3/search"
   },
   "planetOverlaysSourceConfig": {
     "baseUrl": "https://api.planet.com/data/v1/quick-search",
@@ -1133,5 +1132,13 @@
     ],
     "apiKey": "98d4e5a377594e7b80f692d9d487ff26",
     "tilesUrl": "https://tiles.planet.com/data/v1/"
+  },
+  "auth0Config": {
+      "clientID":"{{ getv "/ansyn/auth0/clientId" "KXLTbs08LtLqrbPwSgn7Ioej0aMB7tf6" }}",
+      "domain": "{{ getv "/ansyn/auth0/domain" "imisight-sat.auth0.com" }}",
+      "responseType": "{{ getv "/ansyn/auth0/responseType" "token id_token" }}",
+      "audience": "{{ getv "/ansyn/auth0/audience" "https://gw.sat.imisight.net" }}",
+      "callbackURL": "{{ getv "/ansyn/auth0/callbackURL" "http://localhost:4200/#/callback/" }}",
+      "scope": "{{ getv "/ansyn/auth0/scope" "openid" }}"
   }
 }
