--- a/src/app/@ansyn/core/components/manual-removed-overlays/manual-removed-overlays.component.less
+++ b/src/app/@ansyn/core/components/manual-removed-overlays/manual-removed-overlays.component.less
@@ -24,7 +24,7 @@ div.removed-show-hide {
 .show-hide-filtered-overlays-text {
 	margin-left: 15px;
 	color: #f4fbfd;
-	font-size: initial;
+	font-size: 14px;
 }
 
 .reset-list {
