--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
@@ -90,6 +90,7 @@
 			color: black;
 			display: flex;
 			align-items: center;
+			left: 0;
 			top: calc(~'100% + 20px');
 			display: flex;
 			flex-direction: row;
