--- a/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.less
+++ b/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.less
@@ -2,6 +2,7 @@
 @import "core/less/z-index-globals";
 
 @animation-duration: 0.3s;
+@image-height: 150px;
 
 :host {
 	position: fixed;
@@ -24,6 +25,8 @@
 		align-items: center;
 		position: relative;
 		main {
+			min-height: @image-height;
+
 			p.error-text {
 				top: 50px;
 				position: absolute;
@@ -54,7 +57,7 @@
 }
 
 img {
-	height: 150px;
+	height: @image-height;
 
 	&.loading {
 		visibility: hidden;
