overlay description: 1. removing overflow hidden, becasue it is incompatible with the popover component 2. leaving some right padding, to minimize the risk of multiple concurrent popups..

--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
@@ -135,9 +135,7 @@
 			overflow: hidden;
 		}
 		.description {
-			padding: 0;
-			max-width: initial;
-			overflow: hidden;
+			padding-left: 0;
 		}
 	}
 }
