1. Revert to imagery-status component file, and use the mapAmount input field 2. Move from position:absolute to position:relative, rather than position: initial. Requires resetting left, top, right properties

--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
@@ -124,18 +124,23 @@
 // Prevent collision of description and buttons in small resolution
 @media screen and (max-width: 1240px) {
 	:host {
-		width: 25%;
-		justify-content: space-between;
-		.buttons {
-			position: initial;
-		}
-		.notification {
-			position: initial;
-			max-width: initial;
-			overflow: hidden;
-		}
-		.description {
-			padding-left: 0;
+		&.one-map {
+			width: 25%;
+			justify-content: space-between;
+			.buttons {
+				position: relative;
+				left: initial;
+				top: initial;
+			}
+			.notification {
+				position: relative;
+				right: initial;
+				max-width: initial;
+				overflow: hidden;
+			}
+			.description {
+				padding-left: 0;
+			}
 		}
 	}
 }
