1. Revert to imagery-status component file, and use the mapAmount input field 2. Move from position:absolute to position:relative, rather than position: initial. Requires resetting left, top, right properties

--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
@@ -125,15 +125,15 @@
 @media screen and (max-width: 1240px) {
 	:host {
 		&.one-map {
-			width: 25%;
+			max-width: 35%;
 			justify-content: space-between;
 			.buttons {
-				position: relative;
+				position: initial;
 				left: initial;
 				top: initial;
 			}
 			.notification {
-				position: relative;
+				position: initial;
 				right: initial;
 				max-width: initial;
 				overflow: hidden;
