--- a/src/app/@ansyn/status-bar/components/status-bar/status-bar.component.less
+++ b/src/app/@ansyn/status-bar/components/status-bar/status-bar.component.less
@@ -9,6 +9,7 @@
 	height: @status-bar-height;
 	box-shadow: 0 -10px 20px 0 rgba(0, 0, 0, 0.3);
 	display: flex;
+	justify-content: space-between;
 	transform: translate(0, -100%);
 
 	.ansyn-tree-view {
@@ -66,7 +67,6 @@
 			.selected-case, .status {
 				display: inherit;
 			}
-			flex: inherit;
 			border-color: white;
 			justify-content: space-around;
 			/deep/ .selectedCase {
