--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
@@ -121,3 +121,26 @@
 	}
 }
 
+// Prevent collision of description and buttons in small resolution
+@media screen and (max-width: 1240px) {
+	:host {
+		&.one-map {
+			max-width: 35%;
+			justify-content: space-between;
+			.buttons {
+				position: initial;
+				left: initial;
+				top: initial;
+			}
+			.notification {
+				position: initial;
+				right: initial;
+				max-width: initial;
+				overflow: hidden;
+			}
+			.description {
+				padding-left: 0;
+			}
+		}
+	}
+}
