added activeMapId$ to overlay-overview.component

--- a/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.html
+++ b/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.html
@@ -5,7 +5,9 @@
 			[src]="imageSrc"
 			(error)="imageSrc = errorSrc"
 			(load)="finishedLoadingImage()"
-			[class.loading]="loading">
+			[class.loading]="loading"
+			[style.transform]="'rotate(' + kulolo + 'rad)'"
+		>
 		<p class="error-text" *ngIf="imageSrc === errorSrc">Preview is not available</p>
 		<ansyn-loader [show]="loading"></ansyn-loader>
 	</main>
