--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
@@ -25,9 +25,9 @@
 </div>
 
 
-<!--&lt;!&ndash; App overlays &ndash;&gt;-->
-<!--<ansyn-toast [duration]="4"></ansyn-toast>-->
+<!-- App overlays -->
+<ansyn-toast [duration]="4"></ansyn-toast>
 
-<!--<ansyn-overlay-overview></ansyn-overlay-overview>-->
+<ansyn-overlay-overview></ansyn-overlay-overview>
 
-<!--<router-outlet></router-outlet>-->
+<router-outlet></router-outlet>
